deployments/authentication-service.yml
#encrypt the username and passwd
#echo -n 'postgres' | base64
#echo -n 'postgrespass' | base64
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service-v3-5
  namespace: mi-v3-5
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: authentication-service-v3-5
  strategy:
      type: RollingUpdate
  template:
    metadata:
      labels:
        app: authentication-service-v3-5
    spec:
      nodeSelector:
         Name: "mi-v3-5"
      volumes:
        - name: logs
          persistentVolumeClaim:
             claimName: authentication-service-v3-5-pvc
      imagePullSecrets:
        - name: regcred
      hostAliases:
        - ip: "192.168.135.212"
          hostnames:
          - "postgres"
      containers:
        - image:  IMAGE
          name: authentication-service-v3-5
          imagePullPolicy: Always
          command: 
          - gunicorn
          - --reload 
          - --bind=0.0.0.0:9090
          - --workers=4 
          - --timeout=3600 
          - app:app
          ports:
          - name: service-port
            containerPort: 9090
          volumeMounts:
            - name: logs
              mountPath: /var/log/authentication/
          resources:
            requests:
              memory: 1Gi
---
apiVersion: v1     #service is enabled which is available in cluster , not outside .  Because to discover by the depeendency pods 
kind: Service
metadata:
  name: authentication-service-v3-5
  namespace: mi-v3-5
spec:
  ports:
  - port: 9090
    targetPort: service-port
    protocol: TCP
  selector:
    app: authentication-service-v3-5
  type: ClusterIP
