deployments/cpv-ui.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpv-nextgen-ui-v3-5 
  namespace: mi-v3-5
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cpv-nextgen-ui-v3-5
  strategy:
      type: RollingUpdate
  template:
    metadata:
      labels:
        app: cpv-nextgen-ui-v3-5
    spec:
      imagePullSecrets:
        - name: regcred
      nodeSelector:
         Name: mi-v3-5
      containers:
        - image: IMAGE 
          name: cpv-nextgen-ui-v3-5
          imagePullPolicy: Always
          ports:
          - name: port
            containerPort: 80
          resources:
            requests:
              memory: 0.5Gi
              #  limits:
                  #   cpu: 200m
                  #  memory: 1Gi
---
apiVersion: v1     #service is enabled which is available in cluster , not outside .  Because to discover by the depeendency pods 
kind: Service
metadata:
  name: cpv-nextgen-ui-v3-5
  namespace: mi-v3-5
spec:
  ports:
  - port: 80
    targetPort: port
    protocol: TCP
  selector:
    app: cpv-nextgen-ui-v3-5
  type: ClusterIP
