deployments/genealogy-service.yml
#encrypt the username and passwd
#echo -n 'postgres' | base64
#echo -n 'postgrespass' | base64
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genealogy-service-v3-5
  namespace: mi-v3-5
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: genealogy-service-v3-5
  strategy:
      type: RollingUpdate
  template:
    metadata:
      labels:
        app: genealogy-service-v3-5
    spec:
      nodeSelector:
         Name: "mi-v3-5"
      imagePullSecrets:
        - name: regcred1
      volumes:
        - name: logs
          persistentVolumeClaim:
             claimName: genealogy-service-v3-5-pvc
      hostAliases:
        - ip: "192.168.129.137"
          hostnames:
          - "postgres"
        - ip: "192.168.132.176"
          hostnames:
          - "neo4j"
      containers:
        - image: IMAGE
          name: genealogy-service-v3-5
          imagePullPolicy: Always
          command: 
          - gunicorn
          - --reload 
          - --bind=0.0.0.0:5000
          - --workers=2 
          - --timeout=3600 
          - rest_api_connexion:create_app()
          ports:
          - name: service-port
            containerPort: 5000
          volumeMounts:
            - name: logs
              mountPath: /var/log/genealogy-service 
          resources:
            requests:
              memory: 1Gi
              #  limits:
                  #   cpu: 200m
                  #  memory: 1Gi
---
apiVersion: v1     #service is enabled which is available in cluster , not outside .  Because to discover by the depeendency pods 
kind: Service
metadata:
  name: genealogy-service-v3-5
  namespace: mi-v3-5
spec:
  ports:
  - port: 5000
    targetPort: service-port
    protocol: TCP
  selector:
    app: genealogy-service-v3-5
  type: ClusterIP
