deployments/in-nginx-v3-5.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: in-nginx-v3-5
  namespace: mi-v3-5
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: in-nginx-v3-5
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: in-nginx-v3-5
    spec:
      hostAliases:
        - ip: "192.168.139.221"
          hostnames:
          - "airflow-webserver"
      volumes:
        - name: nginx-v3-5-conf
          configMap:
            name: nginx-v3-5-conf # place ConfigMap `nginx3-4-conf` on /etc/nginx
      containers:
      - image: nginx:1.19
        name: nginx
        ports:
          - name: nginx-port
            containerPort: 80
        volumeMounts:
          - name: nginx-v3-5-conf
            mountPath: /etc/nginx/conf.d
        resources:
          requests:
            memory: 0.1Gi
                     
---
apiVersion: v1
kind: Service
metadata:
  name: in-nginx-v3-5
  namespace: mi-v3-5
spec:
  ports:
   - name: nginx-port
     port: 80
     targetPort: nginx-port
     protocol: TCP
  selector:
    app: in-nginx-v3-5
  type: ClusterIP
